# TicketSystem-Automata

./: .gitignore  BPlusTree.h  BPlusTreeString.h  BPlusTree_SingleKeyVersion.h  CMakeLists.txt  HashType.h  MemoryPool.h  README.md  TokenScanner.h  UnrolledLinkedList.cpp  UnrolledLinkedList.h  algorithm.h  main.cpp  testBPlusTree.cpp  testBPlusTree_SingleKeyVersion.cpp  testUnrolledLinkedList.cpp
BackEnd/include/: AlternativeMultiBPlusTree.h  BPlusTree.h  BPlusTree_SingleKeyVersion.h  HashMap.h  HashType.h  LRUCacheMemoryPool.h  MultiBPlusTree.h  Parser.h  TokenScanner.h  algorithm.h
BackEnd/include/RTL/: Clock.h  MyString.h  algorithm.h  exceptions.h  map.h  rmstream.h  string_t.h  vector.h
BackEnd/src/: Administrator.cpp  Administrator.h  GLobal.h  Global.h  OrderManager.cpp  OrderManager.h  TrainManager.cpp  TrainManager.h  UserManager.cpp  UserManager.h  main.cpp
FrontEnd/: PTF.hpp  README.md
FrontEnd/BackEnd/include/: BPlusTree.h  MemoryPool.h  MultiBPlusTree.h
FrontEnd/BackEnd/src/: Administrator.cpp  Administrator.h  Global.h  main.cpp  (+6 more)
FrontEnd/Website/: console.html  dashboard-modifyProfile.html  dashboard-order.html  dashboard-ticket.html  dashboard-train.html  dashboard-user.html  dashboard.html  index.html  login.html  register.html
General/: DevelopmentDocument.md  TicketSystemAutomata 软件开发手册.md
LocalJudge/: clean.sh  debugBPlusTree.cpp  localJudge.py  run.py
src/: BPlusTree.h  BPlusTree_SingleKeyVersion.h  HashMap.h  HashType.h  LRUCacheMemoryPool.h  MemoryPool.h  Parser.h  TokenScanner.h  algorithm.h  main.cpp
test/: testBPlusTree.cpp
(+19 files in other folders)
